<?xml version="1.0"?>
<package format="3">
  <name>turtle_regulation</name>
  <version>0.0.1</version>
  <description>Package de régulation en cap pour turtlesim</description>

  <maintainer email="ton.email@example.com">Damien Salamero</maintainer>
  <license>Apache-2.0</license>

  <!-- Indique qu'on utilise le système de build ament_python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dépendances nécessaires à l'exécution (et au build) -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>

  <depend>turtle_interfaces</depend>


  <!-- (facultatif) pour vos tests de lint :  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  -->

  <export>
    <!-- C’est cette ligne qui indique « c’est un package Python » -->
    <build_type>ament_python</build_type>
  </export>
</package>

