[metadata]
name = turtle_regulation
version = 0.0.1
description = Régulation en cap et distance pour turtlesim
author = SALAMERO DAMIEN
author_email = damienkikou262122@icloud.com
license = Apache-2.0

[options]
packages = find:
install_requires =
    setuptools
    turtle_interfaces
    rclpy
    std_msgs
    turtlesim
    geometry_msgs

[options.entry_points]
console_scripts =
    set_way_point    = turtle_regulation.set_way_point:main
    turtle_regulator = turtle_regulation.turtle_regulator:main

[develop]
script_dir = $base/lib/turtle_regulation

[install]
install_scripts = $base/lib/turtle_regulation

